BusOne02/src/objects/Address_vod__c.object
<CustomObject>
    <description>This object stores all addresses for each account profile as well as DEA and State Licenses for physicians.  The State Licenses are maintained across Address records based on the Address_trigger_vod trigger.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA field stores the equivalent of the DEA # for Puerto Rican address records.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>The Account field represents the Account that Address is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Address_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_line_2_vod__c</fullName>
        <description>Second line of street address. The first line is stored in the name field of the address record.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appt_Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if an appointment is required for this address</description>
        <label>Appt. Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID. It is used for BOT internal purpose.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Times_vod__c</fullName>
        <description>Used by the Office Best Times control to store the best time to visit this address.</description>
        <label>Best Times</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if an Address serves as a billing address.</description>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brick_vod__c</fullName>
        <description>The Brick that corresponds to the Address for use in International implementations.  The Brick value is utilized by the Territory Management process for alignments.</description>
        <label>Brick</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if an Address serves as a business address.</description>
        <label>Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_Status_vod__c</fullName>
        <description>The status of the CDS registration number. This field should be set to either Valid_vod or Invalid_vod. Invalid_vod will restrict Controlled Substance sampling at this Address in states where a CDS is required.</description>
        <label>CDS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Address</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_GPS_Coordinates_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True, Latitude_vod and Longitude_vod are cleared upon address change, if they have not been updated. If False, Latitude_vod and Longitude_vod are maintained.</description>
        <label>Clear GPS Coordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_vod__c</fullName>
        <description>Comments for this address.</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlled_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then this address is controlled by child account push.</description>
        <label>Controlled Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlling_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address that was used as a template to create the address by the child account push.</description>
        <label>Controlling Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Controlling_Address_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>The Country field stores the Country of the Address record.  The picklist values should be the two digit code, such as &quot;uk&quot; for the United Kingdom.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staging_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Under_Review_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEA_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if the Address record is a DEA Address and should be handled accordingly</description>
        <label>DEA Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA license expiration date.  The Expiration Date must be in the future if a Physician is to be allowed to receive Controlled Substance Samples.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_License_Address_vod__c</fullName>
        <description>DEA License Address is the Address stored on the physical DEA License for the Account.  The DEA License Address field is compared to the Address fields for this specific record and is used in the DEA License validation for controlled substance sampling.</description>
        <label>DEA License Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEA_Schedule_vod__c</fullName>
        <description>Comma delimited list of Schedules  of Drugs that a Physician is able to receive at this Address</description>
        <label>DEA Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Status_vod__c</fullName>
        <description>DEA Status for the Physician&apos;s DEA License.  This field should be set to either Valid_vod or Invalid_vod.  Valid_vod will allow the Physician to receive Controlled Substances at this Address.</description>
        <label>DEA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>DEA license number.  Determines if a Physician is able to receive Controlled Substance Samples at this Address.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>This Veeva field ensures proper synchronization even after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is only used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_2_vod__c</fullName>
        <description>Alternate fax number for the Account at this Address.</description>
        <label>Fax 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_vod__c</fullName>
        <description>Fax number for the Account at this Address.</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if the Address serves as a home address.</description>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Inactive checkbox determines if the Address record will be displayed in the Call Report and My Schedule Address Picklist for both online and offline implementations.  If the Inactive checkbox is checked, then the Address record will not be displayed.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Territory_Assignment_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is checked the address will be included in the territory assignment process even if it is not a primary address.</description>
        <label>Include in Territory Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KNI_Address_ModTime__c</fullName>
        <description>DateTime value is populated by Knipper Address trigger. Fields monitored by the trigger are listed in Knipper_Settings__c.Address_Detect_Change_FieldList__c.</description>
        <label>Address Mod Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KNI_Client_ID__c</fullName>
        <description>Knipper Unique Client Address ID</description>
        <externalId>true</externalId>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KNI_License_Last_Validated_Date__c</fullName>
        <description>Knipper Date when SLN was last validated</description>
        <label>License Last Validated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude_vod__c</fullName>
        <description>Latitude of this address. Used for mapping. This value is set to blank via trigger whenever a relevant address field changes. If zero, the latitude is written from the &quot;MyMaps&quot; functionality when the user maps this address. This field can be pre-populated from an external program.</description>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>State License Expiration Date.  The State License Expiration Date is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>State License Status.  The State License Status is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
                <value>
                    <fullName>Expired_vod</fullName>
                </value>
                <value>
                    <fullName>Sampled_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Valid_To_Sample_vod__c</fullName>
        <description>License Valid to Sample formula defines if a License is Valid or Invalid and determines if an Account can receive and sign for Samples in the VBioPharma application.</description>
        <formula>IF(LEN( TRIM(License_vod__c )) &lt;1,&quot;Invalid&quot;,IF(ISNULL( License_Expiration_Date_vod__c ) ,&quot;Invalid&quot;,IF(AND( License_Expiration_Date_vod__c &gt;= TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;Valid_vod&quot;)),&quot;Valid&quot;, &quot;Invalid&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Valid To Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>State License Number for the corresponding State of the Address.  The State License Number is maintained across Addresses for an Account for the same State by the Address_trigger_vod trigger on the Address object.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the &quot;Locked&quot; field is set to true, only users with the &quot;Modify All Data&quot; privilege can edit the &quot;Address Line 1(Name)&quot; field or delete the record. If the &quot;Locked&quot; field is null, false or absent, then the trigger should do nothing. The &quot;Locked&quot; field would be best left off of &quot;Rep Maintained&quot; layouts.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Longitude_vod__c</fullName>
        <description>Longitude of this address. Used for mapping. This value is set to blank via trigger whenever a relevant address field changes. If zero, the longitude is written from the &quot;MyMaps&quot; functionality when the user maps this address. This field can be pre populated from an external program.</description>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if an Address serves as a mailing address.</description>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_vod__c</fullName>
        <description>Displays a hyperlink to view the address in Google maps.</description>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot; &amp; Name &amp; &quot;+&quot; &amp; City_vod__c , &quot;map&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Align_Id_vod__c</fullName>
        <description>Globally unique identifier for this object. This Id is managed by Align</description>
        <label>Master Align Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NET_Address_Ordinal__c</fullName>
        <label>Network Address Ordinal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_Address_Status__c</fullName>
        <label>Network Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NET_Address_Type__c</fullName>
        <label>Network Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mail Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NET_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Network Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NET_Record_State__c</fullName>
        <label>Network Record State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>New Child Record Added During Merge</fullName>
                </value>
                <value>
                    <fullName>Child Record Inactivated During Merge</fullName>
                </value>
                <value>
                    <fullName>Merged Into</fullName>
                </value>
                <value>
                    <fullName>Parent Merged</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NET_Veeva_Mastered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veeva Mastered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_ASSMCA_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the ASSMCA license ID associated to this address</description>
        <label>Network ASSMCA Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_CDS_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the CDS license ID associated to this address</description>
        <label>Network CDS Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_DEA_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the DEA license ID associated to this address</description>
        <label>Network DEA Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Distributor_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the State Distributor license ID associated to this address</description>
        <label>Network Distributor Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_License_Entity_ID_vod__c</fullName>
        <description>Network entity ID of the State license ID associated to this address</description>
        <label>Network License Entity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Sample_Eligibility_vod__c</fullName>
        <description>Contains the eligibility of the HCP associated with this address to receive samples, as described in the customer master data</description>
        <label>Sample Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible_vod</fullName>
                </value>
                <value>
                    <fullName>Ineligible_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Address_Copy_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override automated push of address.</description>
        <label>No Address Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Notes_vod__c</fullName>
        <description>Area to keep notes for this address.</description>
        <label>Office Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_2_vod__c</fullName>
        <description>Alternate phone number for the Account for this Address.</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Primary phone number for the Account for this Address.</description>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address serves as the primary address for the associated account. A trigger insures that there is only one primary address.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Send_Status_vod__c</fullName>
        <description>Indicates the availability of an address record for selection in the Ship To Address field on the call report.
Pending_vod - Newly created address record that is not able to be shipped samples until address is verified
Valid_vod - Address record that is able to be shipped samples
Invalid_vod - Address record that is not able to be shipped samples</description>
        <label>Sample Send Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Status_vod__c</fullName>
        <description>Sample Status defines the status of the State License and controls the Sample Status.  Sample Status of Valid represents a Green indicator.  Sample Status of Pending represents a Yellow Indicator.  Sample Status of Invalid represents a Red Indicator.</description>
        <formula>IF(LEN( TRIM(License_vod__c )) &lt; 1,&quot;Invalid&quot;,IF(ISNULL( License_Expiration_Date_vod__c ),&quot;Invalid&quot;,IF(AND( License_Expiration_Date_vod__c &gt;= TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;Valid_vod&quot;)),&quot;Valid&quot;,IF(AND( License_Expiration_Date_vod__c &gt;= TODAY() ,ISPICKVAL(License_Status_vod__c, &quot;New_vod&quot;)), &quot;Pending&quot;,&quot;Invalid&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that determines if an Address serves as a shipping address</description>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_vod__c</fullName>
        <description>Source of the Address information.  The Source field should be set if a System Integration is utilized to create and maintain Addresses.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>HMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_notes_vod__c</fullName>
        <description>Area to keep notes about the staff at this address.</description>
        <label>Staff notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Category_vod__c</fullName>
        <description>Category of Drugs that a Health Care Provider is able to receive at this Business Address</description>
        <label>State Distributor Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Expiration_Date_vod__c</fullName>
        <description>State Distributor license expiration date. The Expiration Date must be today or in the future if a Health Care Professional is to be allowed to receive Samples at the Business Address.</description>
        <label>State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Distributor_License_Exempt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the State Distributor License validation for the Business Address should happen for a Health Care Professional at this address. If the State Distributor Exempt checkbox is checked, then the State Distributor License validation for the Business Address will not be performed on a call.</description>
        <label>State Distributor License Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Status_vod__c</fullName>
        <description>State Distributor Status for the Business Address. This field should be set to either Valid_vod or Invalid_vod. Valid_vod will allow the Health Care Professional to receive samples at this Business Address.</description>
        <label>State Distributor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid_vod</fullName>
                </value>
                <value>
                    <fullName>Invalid_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Distributor_vod__c</fullName>
        <description>State Distributor License Number for the corresponding Business Address. Determines if a Health Care Professional at the Business Address is able to receive Controlled and Dangerous Substance Samples.</description>
        <label>State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State of the Address</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_4_vod__c</fullName>
        <description>ZIP + 4 of the Address</description>
        <label>Zip + 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip code of the Address</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>BOT_Address</fullName>
        <active>true</active>
        <description>It is created by BusinessOne Technologies Inc and used to store BOT address records.</description>
        <label>BOT Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompanyMaintained</fullName>
        <active>true</active>
        <description>Office address maintained centrally</description>
        <label>Company Maintained</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldMaintained</fullName>
        <active>true</active>
        <description>Office address maintained by the Field</description>
        <label>Field Maintained</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DEA_Puerto_Rico_vod</fullName>
        <active>true</active>
        <description>his validation rules is in place to confirm that a DEA Address for Puerto Rico has an ASSMCA Number populated.</description>
        <errorConditionFormula>AND(DEA_Address_vod__c, TRIM(TEXT( State_vod__c)) = &quot;PR&quot;, TRIM(ASSMCA_vod__c) = &quot;&quot;,  Account_vod__r.IsPersonAccount )</errorConditionFormula>
        <errorMessage>The ASSMCA Number is required when creating a DEA Address for Puerto Rico.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEA_Schedule_Confirm_vod</fullName>
        <active>true</active>
        <description>This validation rules is in place to confirm that an Address, which has been marked as a DEA Address has a Schedule.</description>
        <errorConditionFormula>AND(DEA_Address_vod__c, OR(TRIM( DEA_Schedule_vod__c) = &quot;&quot;, TRIM(DEA_vod__c) = &quot;&quot;, TRIM(TEXT(DEA_Status_vod__c)) = &quot;&quot;, ISNULL(DEA_Expiration_Date_vod__c) ),  Account_vod__r.IsPersonAccount  )</errorConditionFormula>
        <errorMessage>The DEA Number, DEA Schedule, DEA Status, and DEA Expiration Date are required when creating a DEA Address.</errorMessage>
    </validationRules>
</CustomObject>